# city-detectives

./: .env.example  .gitignore  README.md
.github/workflows/: quality.yml
_bmad-output/: automation-summary.md  project-context.md  test-design-system.md
_bmad-output/analysis/: brainstorming-session-2026-01-24.md
_bmad-output/implementation-artifacts/: 1-1-app-shell-et-installation.md  1-2-creation-de-compte.md  1-3-decouverte-premiere-enquete-gratuite-onboarding.md  2-1-parcourir-consulter-enquetes.md  2-2-selection-enquete-visibilite-gratuit-payant.md  3-1-demarrer-enquete-navigation-enigmes.md  (+32 more)
city-detectives-api/: Cargo.toml
city-detectives-api/.cargo/: config.toml.example
city-detectives-api/src/: lib.rs  main.rs
city-detectives-api/src/api/: graphql.rs  metrics.rs  mod.rs
city-detectives-api/src/api/middleware/: auth.rs  mod.rs
city-detectives-api/src/db/: mod.rs
city-detectives-api/src/models/: enigma.rs  gamification.rs  investigation.rs  mod.rs  user.rs
city-detectives-api/src/services/: admin_service.rs  analytics_service.rs  auth_service.rs  enigma_service.rs  gamification_service.rs  investigation_service.rs  lore_service.rs  mod.rs  payment_service.rs  push_service.rs
city-detectives-api/src/services/enigma/: mod.rs  puzzle.rs  words.rs
city-detectives-api/tests/api/: admin_test.rs  auth_test.rs  enigmas_test.rs  gamification_test.rs  investigations_test.rs  push_test.rs
city_detectives/: .env.example  .gitignore  README.md  pubspec.yaml
docs/: CONFIG-LOCAL.md  ci.md
scripts/: check-local.ps1  flutter-test-fix.ps1
(+156 files in other folders)
