[package]
name = "city-detectives-api"
version = "0.1.0"
edition = "2021"
description = "City Detectives – API GraphQL (auth, enquêtes)"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
async-graphql = "7"
async-graphql-axum = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.16"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
validator = { version = "0.18", features = ["derive"] }
geo = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"

# Binaire de test d'intégration API (tests/api/auth_test.rs)
[[test]]
name = "auth_test"
path = "tests/api/auth_test.rs"

# Binaire de test d'intégration API (tests/api/investigations_test.rs) – Story 2.1
[[test]]
name = "investigations_test"
path = "tests/api/investigations_test.rs"

# Binaire de test d'intégration API (tests/api/enigmas_test.rs) – Story 4.1
[[test]]
name = "enigmas_test"
path = "tests/api/enigmas_test.rs"
